removing boxicon cdn

--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -65,33 +65,6 @@
       href="https://draculady.de/Pages/contact-english.html"
     />
 
-    <!-- Preloading Boxicons stylesheet -->
-    <link
-      rel="preload"
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      as="style"
-      onload="this.rel='stylesheet'"
-    />
-
-    <!-- Fallback stylesheet for Boxicons in case JavaScript is disabled -->
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      />
-    </noscript>
-
-    <!-- Preloading Boxicons script -->
-    <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
-    <script
-      src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
-      async
-    ></script>
-    <!-- Boxicons stylesheet -->
-    <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
 
     <!-- Page title -->
     <title id="contact-english">Kathrin Peled - contact</title>
@@ -106,7 +79,8 @@
     <!-- Preload and link to the main stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
-        <!-- Preload Font Awesome stylesheet -->
+        <!--  Font Awesome and Boxicons stylesheet -->
+        <link rel="stylesheet" href="../Styles/boxicons.min.css" />
         <link rel="stylesheet" href="../Styles/all.min.css" />
     <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" />
     <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
