--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -66,32 +66,6 @@
       href="https://draculady.de/Pages/contact-german.html"
     />
 
-    <!-- Preloading Boxicons stylesheet -->
-    <link
-      rel="preload"
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      as="style"
-      onload="this.rel='stylesheet'"
-    />
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      />
-    </noscript>
-
-    <!-- Preloading Boxicons JavaScript -->
-    <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
-    <script
-      src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
-      async
-    ></script>
-    <!-- Additional stylesheet for Boxicons -->
-    <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
-
     <!-- ? ShareThis script -->
     <!-- <script
       type="text/javascript"
@@ -102,8 +76,9 @@
     <!-- Preloading main stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
-        <!-- Preload Font Awesome stylesheet -->
-        <link rel="stylesheet" href="../Styles/all.min.css" />
+    <!--  Font Awesome and Boxicons stylesheet -->
+    <link rel="stylesheet" href="../Styles/boxicons.min.css" />
+    <link rel="stylesheet" href="../Styles/all.min.css" />
     <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" />
     <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
 
