--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -67,30 +67,6 @@
       href="https://draculady.de/Pages/resume-english.html"
     />
 
-    <!-- Preloading Boxicons CSS for icons -->
-    <link
-      rel="preload"
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      as="style"
-      onload="this.rel='stylesheet'"
-    />
-
-    <!-- Fallback for browsers that do not support preload -->
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      />
-    </noscript>
-
-    <!-- Preloading Boxicons JavaScript -->
-    <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
-
-    <!-- Loading Boxicons JavaScript asynchronously -->
-    <script
-      src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
-      async
-    ></script>
 
     <!-- ? ShareThis script -->
     <!-- <script
@@ -104,8 +80,9 @@
     <link rel="stylesheet" href="../Styles/style.css" />
     <link rel="preload" href="../Styles/style_resume.css" as="style" />
     <link rel="stylesheet" href="../Styles/style_resume.css" />
-            <!-- Preload Font Awesome stylesheet -->
-            <link rel="stylesheet" href="../Styles/all.min.css" />
+    <!--  Font Awesome and Boxicons stylesheet -->
+    <link rel="stylesheet" href="../Styles/boxicons.min.css" />
+    <link rel="stylesheet" href="../Styles/all.min.css" />
     <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" /> -->
     <!-- <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
 
