--- a/Pages/resumeMobile-english.html
+++ b/Pages/resumeMobile-english.html
@@ -67,27 +67,6 @@
       href="https://draculady.de/Pages/resume-mobile-english.html"
     />
 
-    <!-- Preloading Boxicons stylesheet for performance -->
-    <link
-      rel="preload"
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      as="style"
-      onload="this.rel='stylesheet'"
-    />
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      />
-    </noscript>
-
-    <!-- Preloading Boxicons script -->
-    <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
-    <script
-      src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
-      async
-    ></script>
-
     <!-- ? ShareThis script -->
     <!-- <script
       type="text/javascript"
@@ -100,7 +79,8 @@
     <link rel="stylesheet" href="../Styles/style.css" />
     <link rel="preload" href="../Styles/mobileResume.css" as="style" />
     <link rel="stylesheet" href="../Styles/mobileResume.css" />
-    <!-- Preload Font Awesome stylesheet -->
+    <!--  Font Awesome and Boxicons stylesheet -->
+    <link rel="stylesheet" href="../Styles/boxicons.min.css" />
     <link rel="stylesheet" href="../Styles/all.min.css" />
     <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" /> -->
     <!-- <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
