--- a/Pages/resumeMobile-german.html
+++ b/Pages/resumeMobile-german.html
@@ -67,30 +67,7 @@
       href="https://draculady.de/Pages/resume-mobile-german.html"
     />
 
-    <!-- Preload Boxicons stylesheet -->
-    <link
-      rel="preload"
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      as="style"
-      onload="this.rel='stylesheet'"
-    />
-
-    <noscript>
-      <!-- Fallback for Boxicons stylesheet if JavaScript is disabled -->
-      <link
-        rel="stylesheet"
-        href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      />
-    </noscript>
-
-    <!-- Preload Boxicons script -->
-    <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
-
-    <!-- Load Boxicons script asynchronously -->
-    <script
-      src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
-      async
-    ></script>
+  
 
     <!-- ? ShareThis script -->
     <!-- <script
@@ -104,7 +81,8 @@
     <link rel="stylesheet" href="../Styles/style.css" />
     <link rel="preload" href="../Styles/mobileResume.css" as="style" />
     <link rel="stylesheet" href="../Styles/mobileResume.css" />
-    <!-- Preload Font Awesome stylesheet -->
+    <!--  Font Awesome and Boxicons stylesheet -->
+    <link rel="stylesheet" href="../Styles/boxicons.min.css" />
     <link rel="stylesheet" href="../Styles/all.min.css" />
     <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" /> -->
     <!-- <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
