--- a/Pages/timeline-english.html
+++ b/Pages/timeline-english.html
@@ -79,8 +79,9 @@
     <link rel="stylesheet" href="../Styles/style.css" />
     <link rel="preload" href="../Styles/mobileResume.css" as="style" />
     <link rel="stylesheet" href="../Styles/mobileResume.css" />
-            <!-- Preload Font Awesome stylesheet -->
-            <link rel="stylesheet" href="../Styles/all.min.css" />
+    <!--  Font Awesome and Boxicons stylesheet -->
+    <link rel="stylesheet" href="../Styles/boxicons.min.css" />
+    <link rel="stylesheet" href="../Styles/all.min.css" />
     <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" /> -->
     <!-- <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
 
@@ -585,7 +586,6 @@
     <script src="../Scripts/transfer-resume.js"></script>
     <script src="../Scripts/timeline-filter.js"></script>
     <script src="../Scripts/checkLinks.js" defer></script>
-
 
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
