--- a/index-german.html
+++ b/index-german.html
@@ -67,37 +67,6 @@
     <!-- Canonical URL for SEO -->
     <link rel="canonical" href="https://draculady.de/index-german.html" />
 
-    <!-- Preload Boxicons stylesheet for faster loading -->
-    <link
-      rel="preload"
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      as="style"
-      onload="this.rel='stylesheet'"
-    />
-
-    <!-- Fallback stylesheet for Boxicons -->
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      />
-    </noscript>
-
-    <!-- Preload Boxicons script -->
-    <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
-
-    <!-- Boxicons script -->
-    <script
-      src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
-      async
-    ></script>
-
-    <!-- Boxicons stylesheet -->
-    <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
-
     <!-- ? ShareThis script -->
     <!-- <script
       type="text/javascript"
@@ -111,7 +80,8 @@
 
     <!-- Link to custom stylesheet -->
     <link rel="stylesheet" href="./Styles/style.css" />
-    <!-- Preload Font Awesome stylesheet -->
+    <!--  Font Awesome and Boxicons stylesheet -->
+    <link rel="stylesheet" href="./Styles/boxicons.min.css" />
     <link rel="stylesheet" href="./Styles/all.min.css" />
     <!-- <link rel="stylesheet" href="./Styles/sharingToggle.css" /> -->
 
