--- a/index.html
+++ b/index.html
@@ -64,34 +64,6 @@
     <!-- Canonical link to the current webpage to avoid duplicate content issues -->
     <link rel="canonical" href="https://draculady.de/index.html" />
 
-    <!-- Preload Boxicons stylesheet -->
-    <link
-      rel="preload"
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      as="style"
-      onload="this.rel='stylesheet'"
-    />
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      />
-    </noscript>
-
-    <!-- ! Preload Boxicons JavaScript -->
-    <!-- <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" /> -->
-
-    <!-- Boxicons script for icons -->
-    <script
-      src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
-      async
-    ></script>
-
-    <!-- Link to Boxicons stylesheet again for consistency -->
-    <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
 
     <!-- ? ShareThis script -->
     <!-- <script
@@ -110,7 +82,7 @@
 
     <!-- Preload Font Awesome stylesheet -->
     <link rel="stylesheet" href="./Styles/all.min.css" />
-
+    <link rel="stylesheet" href="./Styles/boxicons.min.css" />
     <!-- Google Analytics tag -->
     <script
       async
