--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -79,8 +79,9 @@
     <!-- Preload and link to the main stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" /> -->
-        <!-- Preload Font Awesome stylesheet -->
-        <link rel="stylesheet" href="../Styles/all.min.css" />
+    <!--  Font Awesome and Boxicons stylesheet -->
+    <link rel="stylesheet" href="../Styles/boxicons.min.css" />
+    <link rel="stylesheet" href="../Styles/all.min.css" />
     <link rel="stylesheet" href="../Styles/style.css" />
     <!-- <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
 
