--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -77,8 +77,9 @@
     <!-- Preload custom stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
-            <!-- Preload Font Awesome stylesheet -->
-            <link rel="stylesheet" href="../Styles/all.min.css" />
+    <!--  Font Awesome and Boxicons stylesheet -->
+    <link rel="stylesheet" href="../Styles/boxicons.min.css" />
+    <link rel="stylesheet" href="../Styles/all.min.css" />
     <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" />
     <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
 
