--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -65,28 +65,6 @@
       href="https://draculady.de/Pages/resume-german.html"
     />
 
-    <!-- Preload Boxicons CSS -->
-    <link
-      rel="preload"
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      as="style"
-      onload="this.rel='stylesheet'"
-    />
-    <noscript>
-      <!-- Fallback for Boxicons CSS -->
-      <link
-        rel="stylesheet"
-        href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      />
-    </noscript>
-
-    <!-- Preload Boxicons JS -->
-    <link rel="preload" href="https://unpkg.com/boxicons.js" as="script" />
-    <script
-      src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
-      async
-    ></script>
-
     <!-- ? ShareThis script -->
     <!-- <script
       type="text/javascript"
@@ -102,8 +80,9 @@
     <!-- Preload resume-specific stylesheet -->
     <link rel="preload" href="../Styles/style_resume.css" as="style" />
     <link rel="stylesheet" href="../Styles/style_resume.css" />
-            <!-- Preload Font Awesome stylesheet -->
-            <link rel="stylesheet" href="../Styles/all.min.css" />
+    <!--  Font Awesome and Boxicons stylesheet -->
+    <link rel="stylesheet" href="../Styles/boxicons.min.css" />
+    <link rel="stylesheet" href="../Styles/all.min.css" />
 
     <!-- Google Tag Manager for analytics -->
     <script
