--- a/Pages/sitemap.html
+++ b/Pages/sitemap.html
@@ -66,7 +66,8 @@
 
     <link rel="stylesheet" href="../Styles/sitemap.css" />
     <link rel="stylesheet" href="../Styles/style.css" />
-    <!-- Preload Font Awesome stylesheet -->
+    <!--  Font Awesome and Boxicons stylesheet -->
+    <link rel="stylesheet" href="../Styles/boxicons.min.css" />
     <link rel="stylesheet" href="../Styles/all.min.css" />
     <!-- <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
     <!-- Google Analytics tag -->
