updated preload links

--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -81,6 +81,8 @@
     <link rel="stylesheet" href="../Styles/style.css" />
         <!--  Font Awesome and Boxicons stylesheet -->
         <link rel="stylesheet" href="../Styles/boxicons.min.css" />
+        <link rel="preload" href="../Styles/all.min.css" as="style" />
+        <link rel="preload" href="../Styles/boxicons.min.css" as="style" />
         <link rel="stylesheet" href="../Styles/all.min.css" />
     <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" />
     <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
