--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -80,6 +80,8 @@
     <!--  Font Awesome and Boxicons stylesheet -->
     <link rel="stylesheet" href="../Styles/boxicons.min.css" />
     <link rel="stylesheet" href="../Styles/all.min.css" />
+    <link rel="preload" href="../Styles/all.min.css" as="style" />
+    <link rel="preload" href="../Styles/boxicons.min.css" as="style" />
     <!-- Custom stylesheet for the portfolio -->
     <link rel="stylesheet" href="../Styles/style.css" />
     <!-- <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
