--- a/Pages/resumeMobile-german.html
+++ b/Pages/resumeMobile-german.html
@@ -67,8 +67,6 @@
       href="https://draculady.de/Pages/resume-mobile-german.html"
     />
 
-  
-
     <!-- ? ShareThis script -->
     <!-- <script
       type="text/javascript"
@@ -84,6 +82,8 @@
     <!--  Font Awesome and Boxicons stylesheet -->
     <link rel="stylesheet" href="../Styles/boxicons.min.css" />
     <link rel="stylesheet" href="../Styles/all.min.css" />
+    <link rel="preload" href="../Styles/all.min.css" as="style" />
+    <link rel="preload" href="../Styles/boxicons.min.css" as="style" />
     <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" /> -->
     <!-- <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
 
