--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
     <!-- Canonical link to the current webpage to avoid duplicate content issues -->
     <link rel="canonical" href="https://draculady.de/index.html" />
 
-
     <!-- ? ShareThis script -->
     <!-- <script
       type="text/javascript"
@@ -80,8 +79,10 @@
     <link rel="stylesheet" href="./Styles/style.css" />
     <!-- <link rel="stylesheet" href="./Styles/sharingToggle.css" /> -->
 
-    <!-- Preload Font Awesome stylesheet -->
+    <!-- Preload Font Awesome and Boxicons stylesheet -->
     <link rel="stylesheet" href="./Styles/all.min.css" />
+    <link rel="preload" href="./Styles/all.min.css" as="style" />
+    <link rel="preload" href="./Styles/boxicons.min.css" as="style" />
     <link rel="stylesheet" href="./Styles/boxicons.min.css" />
     <!-- Google Analytics tag -->
     <script
