--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -83,6 +83,8 @@
     <link rel="stylesheet" href="../Styles/boxicons.min.css" />
     <link rel="stylesheet" href="../Styles/all.min.css" />
     <link rel="stylesheet" href="../Styles/style.css" />
+    <link rel="preload" href="../Styles/all.min.css" as="style" />
+    <link rel="preload" href="../Styles/boxicons.min.css" as="style" />
     <!-- <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
 
     <!-- Google Tag Manager for tracking -->
