--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -83,6 +83,8 @@
     <!--  Font Awesome and Boxicons stylesheet -->
     <link rel="stylesheet" href="../Styles/boxicons.min.css" />
     <link rel="stylesheet" href="../Styles/all.min.css" />
+    <link rel="preload" href="../Styles/all.min.css" as="style" />
+    <link rel="preload" href="../Styles/boxicons.min.css" as="style" />
 
     <!-- Google Tag Manager for analytics -->
     <script
