new skill section

--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -147,7 +147,9 @@
           <div class="all-files">
             <div class="file-item">
               <div class="file-title">
-                <h3 title="Translated to German">Orientation Couse 🇬🇧</h3>
+                <h3 title="Translated to German">
+                  Orientation Couse &#127468;&#127463;
+                </h3>
               </div>
               <img
                 src="../Files-Images/IMG-Orientations-Couse-DCI.webp"
@@ -166,7 +168,9 @@
             </div>
             <div class="file-item">
               <div class="file-title">
-                <h3 title="Translated to German">Prof. Resume 🇬🇧</h3>
+                <h3 title="Translated to German">
+                  Prof. Resume &#127468;&#127463;
+                </h3>
               </div>
               <img
                 src="../Files-Images/IMG CV English.webp"
@@ -185,7 +189,9 @@
             </div>
             <div class="file-item">
               <div class="file-title">
-                <h3 title="Translated to German">Prof. Resume 🇩🇪</h3>
+                <h3 title="Translated to German">
+                  Prof. Resume &#127465;&#127466;
+                </h3>
               </div>
               <img
                 src="../Files-Images/IMG CV German.webp"
@@ -204,7 +210,9 @@
             </div>
             <div class="file-item">
               <div class="file-title">
-                <h3 title="Translated to German">My Diplom 🇩🇪</h3>
+                <h3 title="Translated to German">
+                  My Diplom &#127465;&#127466;
+                </h3>
               </div>
               <img
                 src="../Files-Images/IMG Diplom.webp"
