--- a/index.html
+++ b/index.html
@@ -484,143 +484,279 @@
           <div class="h2-title">
             <h2 id="skills-heading">Skills I bring with me</h2>
           </div>
-          <div class="h3-title">
-            <h3>Professional skills</h3>
+          <div class="skills-categories">
+            <div class="skills-set">
+              <div class="h3-title">
+                <h3>Front-End</h3>
+              </div>
+              <div class="skill-items">
+                <div class="skill">
+                  <div>
+                    <i class="fa-brands fa-html5" aria-hidden="true"></i>
+                  </div>
+                  <div><p>HTML</p></div>
+                </div>
+                <div class="skill">
+                  <div>
+                    <i class="fa-brands fa-bootstrap" aria-hidden="true"></i>
+                  </div>
+                  <div><p>Bootstrap</p></div>
+                </div>
+                <div class="skill">
+                  <div>
+                    <i class="fa-brands fa-css3-alt" aria-hidden="true"></i>
+                  </div>
+                  <div><p>CSS</p></div>
+                </div>
+                <div class="skill">
+                  <div><i class="fa-brands fa-js" aria-hidden="true"></i></div>
+                  <div><p>JavaScript</p></div>
+                </div>
+                <div class="skill">
+                  <div>
+                    <i class="bx bxl-typescript" aria-hidden="true"></i>
+                  </div>
+                  <div><p>TypeScript</p></div>
+                </div>
+                <div class="skill">
+                  <div><i class="bx bxs-devices" aria-hidden="true"></i></div>
+                  <div><p>Responsive Design</p></div>
+                </div>
+                <div class="skill">
+                  <div>
+                    <i class="fa-brands fa-react" aria-hidden="true"></i>
+                  </div>
+                  <div><p>React</p></div>
+                </div>
+                <div class="skill">
+                  <div>
+                    <i
+                      class="fa-brands fa-sass"
+                      title="Sass"
+                      aria-hidden="true"
+                    ></i>
+                  </div>
+                  <div><p>Sass</p></div>
+                </div>
+                <div class="skill">
+                  <div><i class="bx bx-bracket" aria-hidden="true"></i></div>
+                  <div><p>Regex</p></div>
+                </div>
+              </div>
+            </div>
+            <div class="skills-set">
+              <div class="h3-title">
+                <h3>Back-End</h3>
+              </div>
+              <div class="skill-items">
+                <div class="skill">
+                  <div><i class="bx bxs-file-json" aria-hidden="true"></i></div>
+                  <div><p>Json</p></div>
+                </div>
+
+                <div class="skill">
+                  <div>
+                    <i class="fa-brands fa-node-js" aria-hidden="true"></i>
+                  </div>
+                  <div><p>Node JS</p></div>
+                </div>
+                <div class="skill">
+                  <div><i class="bx bxl-mongodb" aria-hidden="true"></i></div>
+                  <div><p>Mongo DB</p></div>
+                </div>
+                <div class="skill">
+                  <div>
+                    <i class="bx bxl-mongodb" aria-hidden="true"></i>
+                  </div>
+                  <div><p>Mongoose</p></div>
+                </div>
+                <div class="skill">
+                  <div><i class="bx bx-map-alt" aria-hidden="true"></i></div>
+                  <div><p>Mongo Atlas</p></div>
+                </div>
+                <div class="skill">
+                  <div><i class="bx bx-compass" aria-hidden="true"></i></div>
+                  <div><p>Mongo Compass</p></div>
+                </div>
+              </div>
+            </div>
+            <div class="skills-set">
+              <div class="h3-title">
+                <h3>Office</h3>
+              </div>
+              <div class="skill-items">
+                <div class="skill">
+                  <div>
+                    <i class="fa-solid fa-database" aria-hidden="true"></i>
+                  </div>
+                  <div><p>SAP</p></div>
+                </div>
+                <div class="skill">
+                  <div>
+                    <i class="fa-solid fa-network-wired" aria-hidden="true"></i>
+                  </div>
+                  <div><p>CRM</p></div>
+                </div>
+                <div class="skill">
+                  <div>
+                    <i class="fa-brands fa-microsoft" aria-hidden="true"></i>
+                  </div>
+                  <div><p>Microsoft Office</p></div>
+                </div>
+              </div>
+            </div>
+            <div class="skills-set">
+              <div class="h3-title">
+                <h3>Design</h3>
+              </div>
+              <div class="skill-items">
+                <div class="skill">
+                  <div>
+                    <i class="fa-solid fa-paintbrush" aria-hidden="true"></i>
+                  </div>
+                  <div><p>Picsart</p></div>
+                </div>
+                <div class="skill">
+                  <div>
+                    <i class="fa-brands fa-figma" aria-hidden="true"></i>
+                  </div>
+                  <div><p>Figma</p></div>
+                </div>
+                <div class="skill">
+                  <div>
+                    <i class="fa-solid fa-palette" aria-hidden="true"></i>
+                  </div>
+                  <div><p>Canva</p></div>
+                </div>
+              </div>
+            </div>
+            <div class="skills-set">
+              <div class="h3-title">
+                <h3>Tools</h3>
+              </div>
+              <div class="skill-items">
+                <div class="skill">
+                  <div>
+                    <i class="fa-brands fa-github" aria-hidden="true"></i>
+                  </div>
+                  <div><p>GitHub</p></div>
+                </div>
+                <div class="skill">
+                  <div>
+                    <i class="fa-solid fa-terminal" aria-hidden="true"></i>
+                  </div>
+                  <div><p>Command Line</p></div>
+                </div>
+                <div class="skill">
+                  <div>
+                    <i class="fa-brands fa-markdown" aria-hidden="true"></i>
+                  </div>
+                  <div><p>Markdown</p></div>
+                </div>
+                <div class="skill">
+                  <div>
+                    <i class="bx bxl-visual-studio" aria-hidden="true"></i>
+                  </div>
+                  <div><p>Visual Studio</p></div>
+                </div>
+                <div class="skill">
+                  <div>
+                    <i class="fa-brands fa-google" aria-hidden="true"></i>
+                  </div>
+                  <div><p>Google Lighthouse</p></div>
+                </div>
+                <div class="skill">
+                  <div><i class="fa-brands fa-npm" aria-hidden="true"></i></div>
+                  <div><p>NPM</p></div>
+                </div>
+                <div class="skill">
+                  <div>
+                    <i
+                      class="fa-solid fa-envelopes-bulk"
+                      aria-hidden="true"
+                    ></i>
+                  </div>
+                  <div><p>Postman</p></div>
+                </div>
+                <div class="skill">
+                  <div>
+                    <i class="fa-solid fa-file-code" aria-hidden="true"></i>
+                  </div>
+                  <div><p>Vite</p></div>
+                </div>
+              </div>
+            </div>
+            <div class="skills-set">
+              <div class="h3-title">
+                <h3>Platforms</h3>
+              </div>
+              <div class="skill-items">
+                <div class="skill">
+                  <div><i class="bx bxs-up-arrow" aria-hidden="true"></i></div>
+                  <div><p>Vercel</p></div>
+                </div>
+                <div class="skill">
+                  <div><i class="bx bxl-netlify" aria-hidden="true"></i></div>
+                  <div><p>Netlify</p></div>
+                </div>
+
+                <div class="skill">
+                  <div>
+                    <i class="fa-brands fa-linux" aria-hidden="true"></i>
+                  </div>
+                  <div><p>Linux</p></div>
+                </div>
+
+                <div class="skill">
+                  <div>
+                    <i
+                      class="fa-solid fa-magnifying-glass-chart"
+                      aria-hidden="true"
+                    ></i>
+                  </div>
+                  <div><p>Google Analytics</p></div>
+                </div>
+                <div class="skill">
+                  <div>
+                    <i class="fa-brands fa-searchengin" aria-hidden="true"></i>
+                  </div>
+                  <div><p>Google Search Console</p></div>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="skills-set">
-            <div class="skill">
-              <div><i class="fa-brands fa-html5" aria-hidden="true"></i></div>
-              <div><p>HTML</p></div>
+          <div class="languages-skills">
+            <div class="h2-title">
+              <h2>Languages</h2>
             </div>
-            <div class="skill">
-              <div>
-                <i class="fa-brands fa-bootstrap" aria-hidden="true"></i>
+            <div class="languages-items">
+              <div class="language-item">
+                <div class="language-emoji"><p>&#127468;&#127463;</p></div>
+                <div class="h3-title">
+                  <h3>English</h3>
+                </div>
+                <div class="language-parameter english-parameter">
+                  <p>Fluent</p>
+                </div>
               </div>
-              <div><p>Bootstrap</p></div>
-            </div>
-            <div class="skill">
-              <div>
-                <i class="fa-brands fa-css3-alt" aria-hidden="true"></i>
+              <div class="language-item">
+                <div class="language-emoji"><p>&#127465;&#127466;</p></div>
+                <div class="h3-title">
+                  <h3>German</h3>
+                </div>
+                <div class="language-parameter german-parameter">
+                  <p>upper-intermediate (B2)</p>
+                </div>
               </div>
-              <div><p>CSS</p></div>
-            </div>
-            <div class="skill">
-              <div><i class="fa-brands fa-js" aria-hidden="true"></i></div>
-              <div><p>JavaScript</p></div>
-            </div>
-            <div class="skill">
-              <div><i class="bx bxl-typescript" aria-hidden="true"></i></div>
-              <div><p>TypeScript</p></div>
-            </div>
-            <div class="skill">
-              <div><i class="bx bxs-devices" aria-hidden="true"></i></div>
-              <div><p>Responsive Design</p></div>
-            </div>
-            <div class="skill">
-              <div>
-                <i
-                  class="fa-brands fa-sass"
-                  title="Sass"
-                  aria-hidden="true"
-                ></i>
+              <div class="language-item">
+                <div class="language-emoji"><p>&#127470;&#127473;</p></div>
+                <div class="h3-title">
+                  <h3>Hebrew</h3>
+                </div>
+                <div class="language-parameter hebrew-parameter">
+                  <p>Native</p>
+                </div>
               </div>
-              <div><p>Sass</p></div>
-            </div>
-            <div class="skill">
-              <div><i class="bx bxs-file-json" aria-hidden="true"></i></div>
-              <div><p>Json</p></div>
-            </div>
-            <div class="skill">
-              <div><i class="bx bx-bracket" aria-hidden="true"></i></div>
-              <div><p>Regex</p></div>
-            </div>
-            <div class="skill">
-              <div>
-                <i class="fa-brands fa-react" aria-hidden="true"></i>
-              </div>
-              <div><p>React</p></div>
-            </div>
-            <div class="skill">
-              <div>
-                <i class="fa-brands fa-node-js" aria-hidden="true"></i>
-              </div>
-              <div><p>Node JS</p></div>
-            </div>
-            <div class="skill">
-              <div><i class="bx bxl-mongodb" aria-hidden="true"></i></div>
-              <div><p>Mongo DB</p></div>
-            </div>
-          </div>
-          <div class="h3-title">
-            <h3>Tools & Platforms I Use</h3>
-          </div>
-          <div class="tools-set">
-            <div class="tool">
-              <div><i class="fa-brands fa-github" aria-hidden="true"></i></div>
-              <div><p>GitHub</p></div>
-            </div>
-            <div class="tool">
-              <div><i class="bx bxs-up-arrow" aria-hidden="true"></i></div>
-              <div><p>Vercel</p></div>
-            </div>
-            <div class="tool">
-              <div><i class="bx bxl-netlify" aria-hidden="true"></i></div>
-              <div><p>Netlify</p></div>
-            </div>
-            <div class="tool">
-              <div><i class="fa-solid fa-terminal" aria-hidden="true"></i></div>
-              <div><p>Command Line</p></div>
-            </div>
-            <div class="tool">
-              <div>
-                <i class="fa-brands fa-markdown" aria-hidden="true"></i>
-              </div>
-              <div><p>Markdown</p></div>
-            </div>
-            <div class="tool">
-              <div><i class="fa-brands fa-linux" aria-hidden="true"></i></div>
-              <div><p>Linux</p></div>
-            </div>
-            <div class="tool">
-              <div><i class="bx bxl-visual-studio" aria-hidden="true"></i></div>
-              <div><p>Visual Studio</p></div>
-            </div>
-            <div class="tool">
-              <div><i class="fa-solid fa-palette" aria-hidden="true"></i></div>
-              <div><p>Canva</p></div>
-            </div>
-            <div class="tool">
-              <div><i class="fa-brands fa-google" aria-hidden="true"></i></div>
-              <div><p>Google Lighthouse</p></div>
-            </div>
-            <div class="tool">
-              <div><i class="fa-brands fa-npm" aria-hidden="true"></i></div>
-              <div><p>NPM</p></div>
-            </div>
-            <div class="tool">
-              <div>
-                <i class="fa-solid fa-paintbrush" aria-hidden="true"></i>
-              </div>
-              <div><p>Picsart</p></div>
-            </div>
-            <div class="tool">
-              <div><i class="fa-brands fa-figma" aria-hidden="true"></i></div>
-              <div><p>Figma</p></div>
-            </div>
-            <div class="tool">
-              <div>
-                <i
-                  class="fa-solid fa-magnifying-glass-chart"
-                  aria-hidden="true"
-                ></i>
-              </div>
-              <div><p>Google Analytics</p></div>
-            </div>
-            <div class="tool">
-              <div>
-                <i class="fa-brands fa-searchengin" aria-hidden="true"></i>
-              </div>
-              <div><p>Google Search Console</p></div>
             </div>
           </div>
         </div>
