--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -147,7 +147,8 @@
           <div class="all-files">
             <div class="file-item">
               <div class="file-title">
-                <h3 title="Translated to German">Orientierungskurs 🇩🇪</h3>
+                <h3 title="Translated to German">Orientierungskurs &#127465;&#127466;
+                </h3>
               </div>
               <img
                 src="../Files-Images/IMG-Orientations-Couse-DCI.webp"
@@ -167,7 +168,8 @@
             <div class="file-item">
               <div class="file-title">
                 <h3 title="Professioneller Lebenslauf auf Englisch">
-                  Prof. Resume 🇬🇧
+                  Prof. Resume &#127468;&#127463;
+
                 </h3>
               </div>
               <img
@@ -188,7 +190,8 @@
             <div class="file-item">
               <div class="file-title">
                 <h3 title="Professioneller Lebenslauf auf Deutsch">
-                  Prof. Resume 🇩🇪
+                  Prof. Resume &#127465;&#127466;
+
                 </h3>
               </div>
               <img
@@ -208,7 +211,8 @@
             </div>
             <div class="file-item">
               <div class="file-title">
-                <h3 title="Diplom ins Deutsche übersetzt">Mein Diplom 🇩🇪</h3>
+                <h3 title="Diplom ins Deutsche übersetzt">Mein Diplom &#127465;&#127466;
+                </h3>
               </div>
               <img
                 src="../Files-Images/IMG Diplom.webp"
