--- a/Pages/timeline-german.html
+++ b/Pages/timeline-german.html
@@ -32,7 +32,7 @@
     <meta property="og:title" content="Kathrin Peled - timeline" />
     <meta
       property="og:description"
-      content="View my professional resume tailored for mobile devices."
+      content="Entdecken Sie meinen Lebenslauf, der als Zeitachse gestaltet wurde, um Layout und Lesbarkeit zu verbessern."
     />
     <meta
       property="og:image"
@@ -66,13 +66,6 @@
       href="https://draculady.de/Pages/timeline-german.html"
     />
 
-    <!-- ? ShareThis script -->
-    <!-- <script
-      type="text/javascript"
-      src="https://platform-api.sharethis.com/js/sharethis.js#property=67056187a6330b001a6016f1&product=sticky-share-buttons&source=platform"
-      async="async"
-    ></script> -->
-
     <!-- Preloading custom stylesheets for the page -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
@@ -83,8 +76,6 @@
     <link rel="stylesheet" href="../Styles/all.min.css" />
     <link rel="preload" href="../Styles/all.min.css" as="style" />
     <link rel="preload" href="../Styles/boxicons.min.css" as="style" />
-    <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" /> -->
-    <!-- <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
 
     <!-- Link to the Schema.js file for structured data -->
     <script src="../Scripts/schema.js" defer></script>
@@ -555,7 +546,6 @@
       <div id="smiley"></div>
       <script src="../ScriptsComponents/smileyLoader.js"></script>
       <!-- ^ hire me -->
-      <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
     <!--* Footer -->
     <div id="footer"></div>
@@ -568,18 +558,5 @@
     <script src="../Scripts/timeline-filter.js"></script>
     <script src="../Scripts/checkLinks.js" defer></script>
 
-    <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
-
-    <!-- Async or defer for external scripts -->
-
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-PCYQWXDRBG");
-    </script>
   </body>
 </html>
