--- a/index-german.html
+++ b/index-german.html
@@ -67,16 +67,8 @@
     <!-- Canonical URL for SEO -->
     <link rel="canonical" href="https://draculady.de/index-german.html" />
 
-    <!-- ? ShareThis script -->
-    <!-- <script
-      type="text/javascript"
-      src="https://platform-api.sharethis.com/js/sharethis.js#property=67056187a6330b001a6016f1&product=sticky-share-buttons&source=platform"
-      async="async"
-    ></script> -->
-
     <!-- Preload custom stylesheet for the page -->
     <link rel="preload" href="./Styles/style.css" as="style" />
-    <!-- <link rel="preload" href="./Styles/sharingToggle.css" as="style" /> -->
 
     <!-- Link to custom stylesheet -->
     <link rel="stylesheet" href="./Styles/style.css" />
@@ -85,7 +77,6 @@
     <link rel="preload" href="./Styles/all.min.css" as="style" />
     <link rel="preload" href="./Styles/boxicons.min.css" as="style" />
     <link rel="stylesheet" href="./Styles/all.min.css" />
-    <!-- <link rel="stylesheet" href="./Styles/sharingToggle.css" /> -->
 
     <!-- Link to the Schema.js file for structured data -->
     <script src="./Scripts/schema.js" defer></script>
@@ -132,16 +123,16 @@
           <div class="paragraph-div intro-paragraph">
             <div class="sub-menu">
               <ul>
-                <a href="#my-education"><li>Meine Ausbildung</li></a>
-                <a href="#current-status"><li>Aktueller Status</li></a>
+                <a href="#my-education"><li>Ausbildung</li></a>
+                <a href="#current-status"><li>Status</li></a>
                 <a href="#skills-and-passion"
-                  ><li>Fähigkeiten und Leidenschaft</li></a
+                  ><li>Fähigkeiten</li></a
                 >
                 <a href="#work-experience-summary"
-                  ><li>Zusammenfassung der Berufserfahrung</li></a
+                  ><li>Berufserfahrung</li></a
                 >
                 <a href="#work-eligibility-and-future-goals"
-                  ><li>Arbeitsberechtigung und Zukunftspläne</li></a
+                  ><li>Arbeitsberechtigung</li></a
                 >
                 <a href="#portfolio-and-contact"
                   ><li>Portfolio und Kontakt</li></a
@@ -777,7 +768,6 @@
       <!-- ~ custom curser -->
       <div class="custom-cursor"></div>
       <!-- ~ custom curser -->
-      <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
     <!--* Footer -->
     <div id="footer"></div>
@@ -788,8 +778,6 @@
     <script src="./Scripts/Cursor.js" async></script>
     <script src="./Scripts/dropdown-menu.js"></script>
     <script src="./Scripts/checkLinks.js" defer></script>
-
-    <!-- <script src="./Scripts/sharing-toggle.js" async></script> -->
 
   </body>
 </html>
